--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,45 @@
   font-family: "Roboto";
   src: url("font/Roboto-Regular.ttf");
 }
+.btn--degrade {
+  height: 50px;
+  border-radius: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: white;
+  border: none;
+  background: linear-gradient(to bottom right, #FF79DA 0%, #9356DC 100%);
+}
+.btn--new {
+  background-color: #99E2D0;
+  color: #32b091;
+  height: 30px;
+  width: 80px;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  text-align: center;
+  line-height: 30px;
+  font-size: 0.9em;
+}
+
+.heart {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  transform: scale(1.5);
+}
+.heart:active {
+  color: #9356DC;
+}
+.heart--modified {
+  color: #9356DC;
+}
+
+.photo {
+  width: 100%;
+}
+
 header .header__logo {
   display: flex;
   justify-content: center;
@@ -29,7 +68,6 @@ header .header__position i {
 }
 
 footer {
-  height: 200px;
   padding: 20px;
   background: #383838;
   color: white;
@@ -39,16 +77,23 @@ footer {
 }
 footer .footer-logo__img {
   filter: invert(100%);
+  transform-origin: left;
   transform: scale(0.3);
 }
-
-* {
-  box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+footer .footer-details {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer-details__icon {
+  margin-right: 10px;
+}
+footer .footer-details__text {
+  margin-bottom: 10px;
 }
 
 body {
   margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
 main #explore-restaurants {
@@ -80,16 +125,6 @@ main #fonct :last-child {
 main #restaurants {
   background-color: #f7f7f7;
   padding: 20px;
-}
-
-.btn_degrade {
-  height: 50px;
-  border-radius: 25px;
-  padding-left: 20px;
-  padding-right: 20px;
-  color: white;
-  border: none;
-  background: linear-gradient(to bottom right, #FF79DA 0%, #9356DC 100%);
 }
 
 .card {
@@ -128,7 +163,6 @@ main #restaurants {
   margin-bottom: 20px;
 }
 .card-restaurant__img {
-  width: 100%;
   height: 70%;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -160,19 +194,6 @@ main #restaurants {
   text-align: center;
   line-height: 30px;
   font-size: 0.9em;
-}
-
-.heart {
-  position: absolute;
-  right: 20px;
-  top: 15px;
-  transform: scale(1.5);
-}
-.heart:active {
-  color: #9356DC;
-}
-.heart--modified {
-  color: #9356DC;
 }
 
 /*# sourceMappingURL=style.css.map */
