--- a/sass/component/_btn.scss
+++ b/sass/component/_btn.scss
@@ -1,9 +1,10 @@
 .btn {
     &--degrade {
         height: 50px;
+        width: 185px;
         border-radius: 25px;
-        padding-left: 20px;
-        padding-right: 20px;
+        padding-left: 15px;
+        padding-right: 15px;
         color: white;
         border: none;
         background: linear-gradient(to bottom right,$color-secondary 0%, $color-primary 100%);
@@ -20,6 +21,7 @@
         text-align: center;
         line-height: 30px;
         font-size: 0.9em;
+        border-radius: 3px;
     }
     
 }
