--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,137 +4,18 @@
 @import "./base/_font.scss";
 
 @import "./component/_btn.scss";
+@import "./component/_container.scss";
+@import "./component/_card.scss";
 @import "./component/_heart.scss";
 @import "./component/_photo.scss";
 
 @import "./layout/_header.scss";
+@import "./layout/_body.scss";
+@import "./layout/_main.scss";
+@import "./layout/_section.scss";
 @import "./layout/_footer.scss";
-
 
 // * {
 //     box-sizing: border-box;
-//     font-family: 'Roboto', sans-serif;
+//     width: auto;
 // }
-
-
-
-
-
-body {
-    margin: 0px;
-    font-family: 'Roboto', sans-serif;
-}
-
-
-
-main {
-    & #explore-restaurants {
-        background-color: lighten($color-quaternaire, 5%);
-        height: 100%;
-        padding-top: 40px;
-        padding-bottom: 40px;
-        padding-left: 5px;
-        padding-right: 5px;
-        text-align: center;
-        & h1 {
-            margin-top: 0px;
-            padding-left: 40px;
-            padding-right: 40px;
-        }
-    }
-
-    & #fonct {
-        padding-left: 20px;
-        padding-right: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        height: 440px;
-        padding-bottom: 50px;
-        & :last-child {
-            transform: background-color(lighten($color-primary, 10%));
-        }
-    }
-
-    & #restaurants {
-        background-color: lighten($color-quaternaire, 5%);
-        padding: 20px;
-        
-    }
-}
-
-
-
-.card {
-    height: 70px;
-    background: lighten($color-quaternaire, 5%);
-    border-radius: 20px;
-    text-align: center;
-    margin-left: 12.5px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0px 5px 10px darken-color($color-quaternaire, 10%);
-    &__circle {
-        height: 25px;
-        width: 25px;
-        color: white;
-        border-radius: 12.5px;
-        background-color: $color-primary;
-        line-height: 25px;
-        position: absolute;
-        left: 20px;
-    }
-    &__icon {
-        color: gray;
-        margin-right: 20px;
-        margin-left: 35px;
-    }
-    &__titre {
-        font-weight: bold;
-    }
-}
-
-.card-restaurant {
-    width: 100%;
-    height: 250px;
-    position: relative;
-    margin-bottom: 20px;
-    &__img {
-        height: 70%;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        object-position: 0px -45px;
-        object-fit: cover;
-    }
-    &__details {
-        height: 75px;
-        background: white;
-        position: absolute;
-        bottom: 0px;
-        right: 0px;
-        left: 0px;
-        border-bottom-left-radius: 10px;
-        border-bottom-right-radius: 10px;
-        padding-left: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        
-    }
-    &__new {
-        background-color: $color-tertiaire;
-        color: darken($color-tertiaire, 30%);
-        height: 30px;
-        width: 80px;
-        position: absolute;
-        right: 10px;
-        top: 10px;
-        text-align: center;
-        line-height: 30px;
-        font-size: 0.9em;
-    }
-}
-
-
-
-
