add underline green in menu 1

--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -1,8 +1,9 @@
 .section-menu {
     & h2 {
         text-transform: uppercase;
-        font-size: 1.4em;
+        font-size: 1.1em;
         font-weight: normal;
         padding-left: 20px;
+        margin-bottom: 10px;
     }
 }
