--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./component/_card.scss";
 @import "./component/_heart.scss";
 @import "./component/_photo.scss";
+@import "./component/underline";
 
 @import "./layout/_header.scss";
 @import "./layout/_body.scss";
