--- a/public/css/style.css
+++ b/public/css/style.css
@@ -174,6 +174,14 @@
   width: 100%;
 }
 
+.underline {
+  background-color: #99E2D0;
+  width: 40px;
+  height: 3px;
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
+
 header {
   display: flex;
   align-items: center;
@@ -247,9 +255,10 @@ body {
 
 .section-menu h2 {
   text-transform: uppercase;
-  font-size: 1.4em;
+  font-size: 1.1em;
   font-weight: normal;
   padding-left: 20px;
+  margin-bottom: 10px;
 }
 
 footer {
