--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,8 +33,16 @@
 .container-column {
   display: flex;
   flex-direction: column;
-  padding-left: 20px;
-  padding-right: 20px;
+  justify-content: space-evenly;
+}
+
+.padding-15 {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.flex1 {
+  flex: 1;
 }
 
 .card-fonction {
@@ -135,11 +143,8 @@
   height: 70px;
   box-shadow: 0px 5px 5px #EAEAEA;
   border-radius: 10px;
-  padding: 10px;
-  padding-right: 20px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
   background-color: white;
   margin-bottom: 20px;
 }
@@ -155,6 +160,12 @@
   display: flex;
   justify-content: space-between;
   font-size: 0.9em;
+}
+.card-menu-detail__right {
+  background-color: #99E2D0;
+  width: 60px;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .heart {
@@ -185,26 +196,17 @@
 header {
   display: flex;
   align-items: center;
+  justify-content: center;
   box-shadow: 0px 5px 5px #d1d1d1;
 }
-header .header__logo {
-  display: flex;
-  justify-content: center;
-  z-index: 1;
-}
 header .header__logo img {
+  width: 100%;
   transform: scale(0.5);
-}
-header .header__logo--menu {
-  box-shadow: none;
 }
 header .header__icon {
   align-items: baseline;
   position: absolute;
   left: 20px;
-}
-header.header--menu {
-  margin-left: 10px;
 }
 
 body {
