--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,17 +1,19 @@
 header {
     display: flex;
     align-items: center;
+    justify-content: center;
     box-shadow: 0px 5px 5px darken-color($color-quaternaire, 10%);
     & .header__logo {
-    display: flex;
-    justify-content: center;
-    z-index: 1;
+    // display: flex;
+    // justify-content: center;
+    // z-index: 1;
         & img {
+            width: 100%;
             transform: scale(0.5);
         }
-        &--menu {
-            box-shadow: none;
-        }
+        // &--menu {
+        //     box-shadow: none;
+        // }
     }
 
     & .header__icon {
@@ -19,7 +21,7 @@ header {
         position: absolute;
         left: 20px;
     }
-    &.header--menu {
-        margin-left: 10px;
-    }
+    // &.header--menu {
+    //     margin-left: 10px;
+    // }
 }
