--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./layout/_section.scss";
 @import "./layout/_footer.scss";
 
-// * {
-//     box-sizing: border-box;
-//     width: auto;
-// }
+* {
+    box-sizing: border-box;
+    width: auto;
+}
