--- a/sass/component/_btn.scss
+++ b/sass/component/_btn.scss
@@ -8,6 +8,9 @@
         color: white;
         border: none;
         background: linear-gradient(to bottom right,$color-secondary 0%, $color-primary 100%);
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     
@@ -25,5 +28,11 @@
         border-radius: 3px;
     }
     
+}
+
+.btn-container {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
 }
 
