add loader spinner

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 
 @import "./base/_font.scss";
 
+@import "./component/loader-spinner";
 @import "./component/_btn.scss";
 @import "./component/_container.scss";
 @import "./component/_card.scss";
