--- a/sass/component/_loader-spinner.scss
+++ b/sass/component/_loader-spinner.scss
@@ -1,19 +1,19 @@
 .loader-spinner {
-    // background: $color-tertiaire;
+    background: transparent;
     // display: inline-block;
     position: fixed;
     width: 100%;
     height: 100%;
-    // z-index: 1;
+    z-index: 1;
     // cursor: wait;
     // opacity: 0;
-    // animation: loader-spinner 5000ms 100ms both;
+    animation: load-spinner 0ms 3000ms both;
 }
 
 .loader-spinner div {
     transform-origin: 40px 40px;
     // animation: load-spinner 1.2s linear infinite;
-    animation: load-spinner 1.2s infinite;
+    animation: loader-spinner 1.2s infinite both;
 
 }
 
@@ -89,7 +89,7 @@
     animation-delay: 0s;
   }
 
-  @keyframes load-spinner {
+  @keyframes loader-spinner {
     0% {
       opacity: 1;
     }
@@ -98,11 +98,12 @@
     }
   }
 
-  // @keyframes loader-spinner {
-  //   0% {
-  //       opacity: 1;
-  //   }
-  //   100% {
-  //       display: none;
-  //   }
-  // }
+  @keyframes load-spinner {
+    90%{
+        opacity: .9;
+        
+    }
+    100% {
+        opacity: 0;
+    }
+  }
