--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -90,7 +90,7 @@
         padding-right: 45px;
         padding-top: 15px;
         display: flex;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: baseline;
     }
 }
