--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,3 +1,7 @@
 @mixin darken-color($color:$color-quaternaire, $pourcentage: 0%) {
     
 }
+
+@mixin color-degrade($color-start: $color-secondary, $color-end: $color-primary) {
+    color: linear-gradient(to bottom right,$color-start 0%, $color-end 100%);
+}
