--- a/sass/layout/_section.scss
+++ b/sass/layout/_section.scss
@@ -7,4 +7,96 @@
         padding-left: 20px;
         margin-bottom: 10px;
     }
+
+    & .card-menu-detail {
+        opacity: 0;
+    }
+
+    & #section-entrees .card-menu-detail:nth-child(1) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 200ms both;
+    }
+    & #section-entrees .card-menu-detail:nth-child(2) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 500ms both;
+    }
+    & #section-entrees .card-menu-detail:nth-child(3) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 800ms both;
+    }
+
+    & #section-plats .card-menu-detail:nth-child(1) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 1100ms both;
+    }
+    & #section-plats .card-menu-detail:nth-child(2) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 1400ms both;
+    }
+    & #section-plats .card-menu-detail:nth-child(3) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 1700ms both;
+    }
+
+    & #section-desserts .card-menu-detail:nth-child(1) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 2000ms both;
+    }
+    & #section-desserts .card-menu-detail:nth-child(2) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 2300ms both;
+    }
+    & #section-desserts .card-menu-detail:nth-child(3) {
+        // border: 1px solid red;
+        animation: show-card-menu-detail $show-card-menu-detail-dur 2600ms both;
+    }
+
+
+
+
+}
+
+#section-entrees {
+    opacity: 0;
+    animation: show-section 500ms 0ms both;
+    // & h2 {
+    //     animation: show-h2 0ms 0ms both;
+    // }
+}
+
+#section-plats {
+    opacity: 0;
+    animation: show-section 500ms 850ms both;
+}
+
+#section-desserts {
+    opacity: 0;
+    animation: show-section 500ms 1850ms both;
+}
+
+@keyframes show-card-menu-detail {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes show-section {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes show-h2 {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
