--- a/public/css/style.css
+++ b/public/css/style.css
@@ -116,10 +116,13 @@
   padding-right: 15px;
   color: white;
   border: none;
+  box-shadow: 0px 3px 10px #9e9e9e;
   background: linear-gradient(to bottom right, #FF79DA 0%, #9356DC 100%);
 }
 .btn--degrade:hover {
   cursor: pointer;
+  background: linear-gradient(to bottom right, #fface8 0%, #ae80e5 100%);
+  box-shadow: 0px 3px 10px #383838;
 }
 .btn--new {
   background-color: #99E2D0;
@@ -230,6 +233,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+}
+.card-restaurant__details i {
+  font-size: 1.7em;
+  right: 20px;
 }
 .card-restaurant__new {
   background-color: #99E2D0;
@@ -428,7 +435,76 @@ body {
   padding-left: 20px;
   margin-bottom: 10px;
 }
+.section-menu .card-menu-detail {
+  opacity: 0;
+}
+.section-menu #section-entrees .card-menu-detail:nth-child(1) {
+  animation: show-card-menu-detail 1000ms 200ms both;
+}
+.section-menu #section-entrees .card-menu-detail:nth-child(2) {
+  animation: show-card-menu-detail 1000ms 500ms both;
+}
+.section-menu #section-entrees .card-menu-detail:nth-child(3) {
+  animation: show-card-menu-detail 1000ms 800ms both;
+}
+.section-menu #section-plats .card-menu-detail:nth-child(1) {
+  animation: show-card-menu-detail 1000ms 1100ms both;
+}
+.section-menu #section-plats .card-menu-detail:nth-child(2) {
+  animation: show-card-menu-detail 1000ms 1400ms both;
+}
+.section-menu #section-plats .card-menu-detail:nth-child(3) {
+  animation: show-card-menu-detail 1000ms 1700ms both;
+}
+.section-menu #section-desserts .card-menu-detail:nth-child(1) {
+  animation: show-card-menu-detail 1000ms 2000ms both;
+}
+.section-menu #section-desserts .card-menu-detail:nth-child(2) {
+  animation: show-card-menu-detail 1000ms 2300ms both;
+}
+.section-menu #section-desserts .card-menu-detail:nth-child(3) {
+  animation: show-card-menu-detail 1000ms 2600ms both;
+}
 
+#section-entrees {
+  opacity: 0;
+  animation: show-section 500ms 0ms both;
+}
+
+#section-plats {
+  opacity: 0;
+  animation: show-section 500ms 850ms both;
+}
+
+#section-desserts {
+  opacity: 0;
+  animation: show-section 500ms 1850ms both;
+}
+
+@keyframes show-card-menu-detail {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes show-section {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes show-h2 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 footer {
   padding: 20px;
   background: #383838;
