--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,3 +6,5 @@ $color-quaternaire: #EAEAEA;
 $loader-spinner-dur: 3000ms;
 $loader-spinner-delay: 0ms;
 $main-container-dur: $loader-spinner-dur + $loader-spinner-delay;
+
+$show-card-menu-detail-dur: 1000ms;
