--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -58,6 +58,7 @@
         flex-direction: column;
         justify-content: space-evenly;
         & i {
+            background: white;
             font-size: 1.7em;
             right: 20px;
         }
