--- a/sass/component/_heart.scss
+++ b/sass/component/_heart.scss
@@ -11,9 +11,12 @@
         position: absolute;
         right: 45px;
         top: 20px;
-        color:  $color-primary;
+        // color:  $color-primary;
         // @include color-degrade;
-        // color: linear-gradient(to bottom right,$color-secondary 0%, $color-primary 100%);
+        background: linear-gradient(to top,$color-secondary 0%, $color-primary 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        color: transparent;
     }
 }
 
