--- a/sass/component/_card.scss
+++ b/sass/component/_card.scss
@@ -3,10 +3,16 @@
     background: lighten($color-quaternaire, 5%);
     border-radius: 20px;
     text-align: center;
-    margin-left: 12.5px;
     display: flex;
+    padding-right: 20px;
     align-items: center;
     box-shadow: 0px 5px 10px darken-color($color-quaternaire, 10%);
+    position: relative;
+    max-width: 550px;
+    width: 100%;
+    @include tablet-big-screen {
+        max-width: 260px;
+    }
     &__circle {
         height: 25px;
         width: 25px;
@@ -15,7 +21,7 @@
         background-color: $color-primary;
         line-height: 25px;
         position: absolute;
-        left: 20px;
+        left: -12.5px;
     }
     &__icon {
         color: gray;
@@ -31,12 +37,23 @@
     
 }
 
+#view-card-restaurants {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+
 
 .card-restaurant {
     width: 100%;
     height: 250px;
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 20px; 
+    max-width: 380px;   
     &__img {
         height: 70%;
         border-top-left-radius: 10px;
