--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -13,6 +13,15 @@ footer {
             filter: invert(100%);
             transform-origin: left;
             transform: scale(0.3);
+            @include pc-screen {
+                width: auto;
+            }
+            @include tablet-big-screen {
+                width: auto;
+            }
+            @include tablet-screen {
+                width: auto;
+            }
         }
     }
     & .footer-details {
@@ -24,6 +33,10 @@ footer {
         &__container {
             display: flex;
             margin-bottom: 10px;
+            & a {
+                text-decoration: none;
+                color: white;
+            }
         }
         
     }
